--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -37,13 +37,22 @@ footer .footer-right {
 
 .footer-wrapper {
   display: grid;
+  justify-items: center;
   width: 100vw;
   grid-template-columns: fit-content;
   grid-template-rows: 1fr auto;
-  justify-content: stretch;
+  justify-self: stretch;
+ 
+  
+
+  &__socialtree{
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+  }
 
   &__logo {
-    margin-left: 20%;
     width: 25cqh;
     max-width: 100%;
     cursor: pointer;
@@ -146,12 +155,40 @@ footer .footer-right {
   }
 }
 
-// @media screen(min-width:375px){
-//   footer{
-//     width: 100vw;
-//   height: 10vh;
-//   display: grid;
-//   grid-template-columns: auto 20%;
-//   align-content: space-around;
-//   }
-// }
+@media (min-width: 375px) {
+  footer {
+    grid-template-columns: 1fr; /* Stack columns */
+    text-align: center; /* Center text */
+    padding: 30px 0; /* Adjust padding */
+    .footer-wrapper__socialtree {
+      flex-direction: row; /* Align social icons horizontally */
+    }
+  
+    .footer-wrapper__social-icons {
+      margin-top: 10px; /* Keep spacing */
+    }
+  
+    .footer-wrapper__links li {
+      line-height: 2em; /* Adjust line height for smaller screens */
+    }
+  
+    .footer-wrapper__info {
+      text-align: center; /* Center info text */
+    }
+  
+    .footer-wrapper__buttons {
+      display: flex;
+      flex-direction: column; /* Stack buttons */
+      align-items: center; /* Center buttons */
+    }
+  
+    .footer-wrapper__buttons button {
+      width: 80%; /* Make buttons wider for touch targets */
+      margin: 5px 0; /* Add space between buttons */
+    }
+  
+    .footer-wrapper__legal {
+      font-size: 12px; /* Adjust legal text size */
+    }
+  }
+  }
