--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -161,7 +161,8 @@ footer .footer-right {
     text-align: center; /* Center text */
     padding: 30px 0; /* Adjust padding */
     .footer-wrapper__socialtree {
-      flex-direction: row; /* Align social icons horizontally */
+      justify-items: center;
+      flex-direction: column; /* Align social icons horizontally */
     }
   
     .footer-wrapper__social-icons {
