--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -12,12 +12,6 @@ footer {
   align-items: center;
 }
 
-footer .footer-left,
-footer .footer-center,
-footer .footer-right {
-  display: inline-block;
-  vertical-align: top;
-}
 
 .legal {
   display: flex;
@@ -77,6 +71,7 @@ footer .footer-right {
     list-style: none;
   }
 
+
   &__social-icons li {
     display: inline-block;
     margin: 0 6px;
@@ -85,7 +80,7 @@ footer .footer-right {
   &__social-icons .fa {
     padding: 20px;
     font-size: 30px;
-    width: 30px;
+    width: 50px;
     text-align: center;
     text-decoration: none;
     margin: 5px 2px;
@@ -161,7 +156,9 @@ footer .footer-right {
     text-align: center; /* Center text */
     padding: 30px 0; /* Adjust padding */
     .footer-wrapper__socialtree {
+      display: flex;
       justify-items: center;
+      align-items: center;
       flex-direction: column; /* Align social icons horizontally */
     }
   
@@ -174,7 +171,8 @@ footer .footer-right {
     }
   
     .footer-wrapper__info {
-      text-align: center; /* Center info text */
+      text-align: center;
+      line-height: 20px; /* Center info text */
     }
   
     .footer-wrapper__buttons {
@@ -189,7 +187,8 @@ footer .footer-right {
     }
   
     .footer-wrapper__legal {
-      font-size: 12px; /* Adjust legal text size */
+      font-size: 12px;
+     /* Adjust legal text size */
     }
   }
 }
