--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -4,7 +4,6 @@ footer {
   background-color: variables.$dark;
   width: 100%;
   text-align: left;
-  padding: 55px 0;
   color: white;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -167,7 +166,8 @@ footer {
     }
   
     .footer-wrapper__links li {
-      line-height: 2em; /* Adjust line height for smaller screens */
+      line-height: 2em;
+      margin: 0; /* Adjust line height for smaller screens */
     }
   
     .footer-wrapper__info {
@@ -204,13 +204,6 @@ footer {
   grid-template-columns: 1fr 1fr 1fr;
   justify-items: stretch;
   align-items: center;
-}
-
-footer .footer-left,
-footer .footer-center,
-footer .footer-right {
-  display: inline-block;
-  vertical-align: top;
 }
 
 .legal {
