--- a/styles.css
+++ b/styles.css
@@ -278,13 +278,6 @@ footer {
   align-items: center;
 }
 
-footer .footer-left,
-footer .footer-center,
-footer .footer-right {
-  display: inline-block;
-  vertical-align: top;
-}
-
 .legal {
   display: flex;
   flex-wrap: wrap;
@@ -312,6 +305,7 @@ footer .footer-right {
 .footer-wrapper__socialtree {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 .footer-wrapper__logo {
@@ -323,6 +317,7 @@ footer .footer-right {
   display: flex;
   justify-content: center;
   margin-top: 10px;
+  padding: 0;
 }
 .footer-wrapper__social-icons a {
   background: #FDFDFF;
@@ -336,15 +331,17 @@ footer .footer-right {
 .footer-wrapper__social-icons li {
   display: inline-block;
   margin: 0 6px;
+  padding: 0;
 }
 .footer-wrapper__social-icons .fa {
-  padding: 20px;
+  justify-content: center;
   font-size: 30px;
-  width: 30px;
+  width: 50px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
   border-radius: 50%;
+  padding: 0;
 }
 .footer-wrapper__social-icons a.facebook:hover {
   background-color: #3b5998;
@@ -361,6 +358,9 @@ footer .footer-right {
 .footer-wrapper__social-icons a.linkedin:hover {
   background-color: #0428f5;
   color: #FDFDFF;
+}
+.footer-wrapper__links {
+  padding: 0;
 }
 .footer-wrapper__links li {
   list-style: none;
@@ -406,7 +406,9 @@ footer .footer-right {
     padding: 30px 0; /* Adjust padding */
   }
   footer .footer-wrapper__socialtree {
+    display: flex;
     justify-items: center;
+    align-items: center;
     flex-direction: column; /* Align social icons horizontally */
   }
   footer .footer-wrapper__social-icons {
@@ -416,7 +418,8 @@ footer .footer-right {
     line-height: 2em; /* Adjust line height for smaller screens */
   }
   footer .footer-wrapper__info {
-    text-align: center; /* Center info text */
+    text-align: center;
+    line-height: 20px; /* Center info text */
   }
   footer .footer-wrapper__buttons {
     display: flex;
@@ -428,7 +431,8 @@ footer .footer-right {
     margin: 5px 0; /* Add space between buttons */
   }
   footer .footer-wrapper__legal {
-    font-size: 12px; /* Adjust legal text size */
+    font-size: 12px;
+    /* Adjust legal text size */
   }
 }
 @media (min-width: 768px) {
@@ -473,6 +477,7 @@ footer .footer-right {
   .footer-wrapper__socialtree {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
   }
   .footer-wrapper__logo {
@@ -501,7 +506,7 @@ footer .footer-right {
   .footer-wrapper__social-icons .fa {
     padding: 20px;
     font-size: 30px;
-    width: 30px;
+    width: 50px;
     text-align: center;
     text-decoration: none;
     margin: 5px 2px;
