--- a/partials/_base.scss
+++ b/partials/_base.scss
@@ -47,6 +47,7 @@ h1 {
 section hr {
   margin-left: 0;
   width: 40%;
+  border-width: 10px;
   max-width: 400px;
   border: solid 2px variables.$ldlRed;
 }
@@ -54,5 +55,5 @@ section hr {
 // PL: ce style s'applique juste aux autres section excepté le carrousel
 section:not([name="carrousel"]) {
   margin: auto;
-  padding: 0 20px 0 20px;
+  padding: 40px;
 }
