--- a/partials/_card.scss
+++ b/partials/_card.scss
@@ -15,8 +15,9 @@
     border-radius: 15px;
     transition: 0.3s;
     margin: 15px;
-    max-width: 381px;
-    min-width: 370px;
+    height: 40vh;
+    max-width: 500px;
+    min-width: 480px;
   }
   &__card:hover {
     box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.2);
