--- a/styles.css
+++ b/styles.css
@@ -44,13 +44,14 @@ h1 {
 section hr {
   margin-left: 0;
   width: 40%;
+  border-width: 10px;
   max-width: 400px;
   border: solid 2px #B20838;
 }
 
 section:not([name=carrousel]) {
   margin: auto;
-  padding: 0 20px 0 20px;
+  padding: 40px;
 }
 
 /* le disclaimer est en display grid sur une colonne et une rangée*/
@@ -309,8 +310,9 @@ section:not([name=carrousel]) {
   border-radius: 15px;
   transition: 0.3s;
   margin: 15px;
-  max-width: 381px;
-  min-width: 370px;
+  height: 40vh;
+  max-width: 500px;
+  min-width: 480px;
 }
 .section-card__card:hover {
   box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.2);
