--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -1,5 +1,5 @@
-$ldlRed: #B20838;
-$white: #FDFDFF;
+$ldlRed: #b20838;
+$white: #fdfdff;
 $dark: #092327;
-$tan: #E2DED4;
-$pink: #F8DDE5;
+$tan: #e2ded4;
+$pink: #f8dde5;
