--- a/partials/_testimony.scss
+++ b/partials/_testimony.scss
@@ -10,7 +10,7 @@
     position: relative;
     padding: 40px;
     border-radius: 15px;
-    // border-left: 5px solid variables.$ldlRed;
+    border-left: 5px solid variables.$ldlRed;
     // background: variables.$white;
     width: 70vw;
   }
